# scrapy-rs

./: .gitignore  Cargo.toml  README.md  design.md
.github/workflows/: rust.yml
benchmark/: Cargo.toml  README.md  README_MOCK_SERVER.md
benchmark/benches/: crawler_benchmark.rs
benchmark/python_templates/: README.md  benchmark_spider.py  items.py  main.py  pipelines.py  settings.py  setup_and_run.sh
benchmark/python_templates/spiders/: benchmark_spider.py
benchmark/src/: common.rs  lib.rs  main.rs  mock_server.rs  scrapy.rs  scrapy_rs.rs
core/: Cargo.toml
core/src/: error.rs  error_handler.rs  item.rs  lib.rs  request.rs  response.rs  signal.rs  spider.rs
downloader/: Cargo.toml
downloader/src/: lib.rs  mock.rs
engine/: Cargo.toml
engine/src/: lib.rs  mock.rs  resource_control.rs  slot.rs
engine/src/config/: mod.rs
engine/src/stats/: mod.rs
engine/src/tests/: close_test.rs  error_handling.rs  resource_control_test.rs  slot_test.rs
engine/src/utils/: mod.rs
engine/tests/: error_handling.rs
examples/: custom_spider.rs  error_handling_example.rs  local_server.rs  monitoring_example.rs  pause_resume_example.rs  resource_control_advanced.rs  resource_control_example.rs  scheduler_example.rs  settings.py  settings_example.py  settings_example.rs  signal_example.rs  simple_crawler.rs
middleware/: Cargo.toml
middleware/src/: lib.rs
middleware/src/tests/: mod.rs  new_tests.rs
middleware/tests/: middleware_tests.rs
monitoring/: Cargo.toml
monitoring/src/: dashboard.rs  lib.rs  metrics.rs  server.rs
monitoring/src/tests/: mod.rs
monitoring/tests/: events_test.rs  integration_test.rs  server_test.rs
pipeline/: Cargo.toml
pipeline/src/: lib.rs
python/: .gitignore  Cargo.toml  MANIFEST.in  README.md  build.rs  example.py  pyproject.toml  release.sh  setup.py
python/examples/: .settings_example.py.swp  advanced_spider.py  basic_spider.py  complex_spider_example.py  response_example.py  simple_example.py
python/src/: Cargo.toml  lib.rs
python/src/rs_spider/: __init__.py
python/src/rs_spider.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/src/scrapy_rs/: __init__.py  __main__.py
scheduler/: Cargo.toml  README.md
scheduler/src/: lib.rs  scheduler_trait.rs  tests.rs  types.rs
scheduler/src/schedulers/: breadth_first_scheduler.rs  depth_first_scheduler.rs  domain_group_scheduler.rs  fifo_scheduler.rs  memory_scheduler.rs  mod.rs
src/: config_adapters.rs  lib.rs  main.rs  settings.rs
