[workspace]
members = [
    "core",
    "scheduler",
    "downloader",
    "middleware",
    "pipeline",
    "engine",
    # "monitoring",
]

[workspace.dependencies]
async-trait = "0.1.77"
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11.24", features = ["json"] }
url = { version = "2.5.0", features = ["serde"] }
log = "0.4.21"
env_logger = "0.11.2"
thiserror = "1.0.57"
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
toml = "0.8.10"
pyo3 = { version = "0.20.2", features = ["extension-module"] }
hyper = { version = "0.14", features = ["full"] }
serde_with = "3.7.0"

[package]
name = "scrapy_rs"
version = "0.1.0"
edition = "2021"
description = "A high-performance web crawler written in Rust"
license = "MIT"

[dependencies]
scrapy_rs_core = { path = "core" }
scrapy_rs_scheduler = { path = "scheduler" }
scrapy_rs_downloader = { path = "downloader" }
scrapy_rs_middleware = { path = "middleware" }
scrapy_rs_pipeline = { path = "pipeline" }
scrapy_rs_engine = { path = "engine" }
# scrapy_rs_monitoring = { path = "monitoring" }
async-trait = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
log = { workspace = true }
env_logger.workspace = true
thiserror = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { version = "4.5.1", features = ["derive"] }
hyper = { workspace = true }

[features]
default = []
yaml = ["dep:serde_yaml"]

[dependencies.serde_yaml]
version = "0.9.32"
optional = true

[[example]]
name = "simple_crawler"
path = "examples/simple_crawler.rs"

[[example]]
name = "custom_spider"
path = "examples/custom_spider.rs"

[[example]]
name = "settings_example"
path = "examples/settings_example.rs"

[[example]]
name = "signal_example"
path = "examples/signal_example.rs"

[[example]]
name = "pause_resume_example"
path = "examples/pause_resume_example.rs"

[[example]]
name = "scheduler_example"
path = "examples/scheduler_example.rs"

[[example]]
name = "local_server"
path = "examples/local_server.rs" 
