[package]
name = "scrapy_rs_benchmark"
version = "0.1.0"
edition = "2021"
description = "Benchmark tools for comparing Scrapy-RS with Scrapy"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[dependencies]
# Scrapy-RS dependencies
scrapy_rs_core = { path = "../core" }
scrapy_rs_downloader = { path = "../downloader" }
scrapy_rs_engine = { path = "../engine" }
scrapy_rs_middleware = { path = "../middleware" }
scrapy_rs_pipeline = { path = "../pipeline" }
scrapy_rs_scheduler = { path = "../scheduler" }

# Async runtime
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# CLI
clap = { version = "4.3", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.2"
chrono = { version = "0.4", features = ["serde"] }

# Logging and output
log = "0.4"
env_logger = "0.10"
colored = "2.0"
indicatif = "0.17"

# System information
sysinfo = { version = "0.29", optional = true }

[dev-dependencies]
criterion = "0.5"

[features]
default = ["sysinfo"]

[[bench]]
name = "crawler_benchmark"
harness = false 