[package]
name = "scrapy_rs_middleware"
version = "0.1.0"
edition = "2021"
description = "Middleware component for the Scrapy-RS web crawler"

[dependencies]
scrapy_rs_core = { path = "../core" }
async-trait = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
rand = "0.8.5"
regex = "1.10.3"

[dev-dependencies]
tokio-test = "0.4.3" 