[package]
name = "scrapy_rs_python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for the RS-Spider web crawler"

[workspace]

[lib]
name = "scrapy_rs"
crate-type = ["cdylib"]

[dependencies]
scrapy_rs = { path = ".." }
scrapy_rs_core = { path = "../core" }
scrapy_rs_scheduler = { path = "../scheduler" }
scrapy_rs_downloader = { path = "../downloader" }
scrapy_rs_pipeline = { path = "../pipeline" }
scrapy_rs_middleware = { path = "../middleware" }
scrapy_rs_engine = { path = "../engine" }
pyo3 = { version = "0.20.2", features = ["extension-module", "abi3-py39", "auto-initialize"] }
tokio = { version = "1.36.0", features = ["full"] }
url = { version = "2.5.0", features = ["serde"] }
log = "0.4.21"
env_logger = "0.11.2"
thiserror = "1.0.57"
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
toml = "0.8.10"

[build-dependencies]
pyo3-build-config = "0.20.2"

[dev-dependencies]
tokio-test = "0.4.3" 