[package]
name = "scrapy_rs_python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for the Scrapy-RS web crawler"

[workspace]

[lib]
name = "scrapy_rs"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
env_logger = "0.10.2"
pyo3 = { version = "0.20.3", features = ["extension-module", "abi3-py39", "abi3-py310", "abi3-py311", "abi3-py312"] }

[build-dependencies]
pyo3-build-config = "0.20.3"

[dev-dependencies]
tokio-test = "0.4.3"

[package.metadata.maturin]
python-source = "python" 