[package]
name = "scrapy_rs_python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for the Scrapy-RS web crawler"
authors = ["Ze Liu <liuze0518@gmail.com>"]
license = "MIT"
repository = "https://github.com/liuze/scrapy-rs"
readme = "README.md"

[workspace]

[lib]
name = "scrapy_rs"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
env_logger = "0.10.2"
pyo3 = { version = "0.20.3", features = ["extension-module", "abi3-py39", "abi3-py310", "abi3-py311", "abi3-py312"] }
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
url = "2.5.0"
serde_json = "1.0"

# Add internal project dependencies
scrapy_rs_core = { path = "../core" }
scrapy_rs_downloader = { path = "../downloader" }
scrapy_rs_engine = { path = "../engine" }
scrapy_rs_middleware = { path = "../middleware" }
scrapy_rs_pipeline = { path = "../pipeline" }
scrapy_rs_scheduler = { path = "../scheduler" }
scrapy_rs = { path = ".." }

[build-dependencies]
pyo3-build-config = "0.20.3"

[dev-dependencies]
tokio-test = "0.4.3"

[package.metadata.maturin]
python-source = "src"
bindings = "pyo3"
module-name = "scrapy_rs"
python-packages = ["scrapy_rs"] 