[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "scrapy-rs"
version = "0.1.0"
description = "Python bindings for the Scrapy-RS web crawler"
authors = [
    {name = "Ze Liu", email = "liuze0518@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/liuze/scrapy-rs"
Repository = "https://github.com/liuze/scrapy-rs"
Documentation = "https://github.com/liuze/scrapy-rs"
"Bug Tracker" = "https://github.com/liuze/scrapy-rs/issues"

[tool.maturin]
python-source = "src"
module-name = "scrapy_rs"
python-packages = ["scrapy_rs"]
features = ["pyo3/extension-module"] 