[package]
name = "scrapy_rs_scheduler"
version = "0.1.0"
edition = "2021"
description = "Scheduler component for the Scrapy-RS web crawler"

[dependencies]
scrapy_rs_core = { path = "../core" }
async-trait = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
dashmap = "5.5.3"
priority-queue = "1.3.2"
serde_json = { workspace = true }

[dev-dependencies]
tokio-test = "0.4.3" 